add profiler for tessellator

--- a/res/profiler/monotone.html
+++ b/res/profiler/monotone.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Test</title>
+        <title>PolygonTessellationProfiler</title>
         <script src="raphael.js"></script>
         <script>
         
